K8s/yaml/lim-range.yaml
---
apiVersion: v1
kind: Namespace
metadata:
 name: dev
 labels:
  name: dev
