K8s/yaml/rs-quota.yaml
---
apiVersion: v1
kind: Namespace
metadata:
 name: uat
 labels:
  name: uat
