K8s/yaml/configmap-vol.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: deployment-dev
 labels:
  app: front
spec:
 replicas: 2
 selector:
  matchLabels:
   app: front
 template:
  metadata:
   labels:
    app: front
  spec:
   containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
       - name: nginx-vol
         mountPath: /etc/nginx/conf.d/
   volumes:
    - name: nginx-vol
      configMap:
       name: nginx-config
       items:
        - key: nginx
          path: default.conf
