K8s/yaml/lim-req.yaml
apiVersion: v1
kind: Pod
metadata:
 name: memory-demo
spec:
 containers:
  - name: memory-demo
    image: polinux/stress
    resources:
     requests:
      memory: "50Mi"
     limits:
      memory: "53Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "2500M", "--vm-hang", "1"]
