K8s/yaml/pvc-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-lib
      volumes:
        - name: mysql-lib
          persistentVolumeClaim:
            claimName: mysql-pv-claim
