K8s/yaml/sa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  labels:
    app: front
# Makes reference to replicaset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    # Makes reference to pods
    spec:
      serviceAccountName: my-sa
      containers:
        - name: nginx
          image: nginx:alpine
