K8s/yaml/ingress-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api-server
# Makes reference to replicaset
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    # Makes reference to pods
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command:
            [
              "sh",
              "-c",
              "echo api-server desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'",
            ]
---
apiVersion: v1
# Makes reference to the service
kind: Service
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80
