K8s/yaml/ns-dns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci
  labels:
    name: ci
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-k8s-hands-on
  namespace: ci
  labels:
    app: backend
# Makes reference to replicaset
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
# Makes reference to pods
    spec:
      containers:
      - name: backend
        image: k8s-hands-on:v2
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
# Makes reference to the service
kind: Service
metadata:
  name: backend-k8s-hands-on
  namespace: ci
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
